--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "husky": "^8.0.3"
+    "@types/node": "^18.11.18",
+    "husky": "^8.0.3",
+    "tsup": "^6.5.0",
+    "tsx": "^3.12.2",
+    "typescript": "^4.9.4"
   }
 }
