chore: install and configure commitlint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "indent": ["error", 2],
+      "max-len": ["error", { "code": 80 }]
     }
 }
