--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "API do Campus Virtual",
   "private": "true",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint . --ext ts"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -18,6 +22,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "tsup": "^6.5.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
