--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "API do Campus Virtual",
   "private": "true",
   "scripts": {
+    "test": "vitest",
     "lint": "eslint . --ext ts",
     "clean": "npx rimraf dist/*",
     "build": "npm run clean && tsup src",
+    "update:check": "npx npm-check-updates",
+    "update:install": "npx npm-check-updates u && npm install",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -27,6 +30,7 @@
     "lint-staged": "^13.1.0",
     "tsup": "^6.5.0",
     "tsx": "^3.12.2",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vitest": "^0.28.1"
   }
 }
